--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.1.1",
-    "@reduxjs/toolkit": "^1.9.5",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@tanstack/react-query": "^5.8.7",
     "@tippyjs/react": "^4.2.6",
     "@types/dom-to-image": "^2.6.4",
     "@types/react-helmet": "^6.1.6",
     "axios": "^1.5.1",
+    "clsx": "^2.0.0",
+    "jwt-decode": "^4.0.0",
     "path": "^0.12.7",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "query-string": "^8.1.0",
@@ -28,8 +31,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.45.2",
-    "react-query": "^3.39.3",
-    "react-redux": "^8.1.1",
+    "react-redux": "^8.1.3",
     "react-rnd": "^10.4.1",
     "react-router-dom": "^6.14.2",
     "react-share": "^4.4.1",
